# tree-sitter

./: .gitattributes  AGENTS.md  CLAUDE.md  CMakeLists.txt  CURRENT_PERFORMANCE_PROFILE.md  Cargo.toml  DETERMINISTIC_WINDOW.md  Makefile  PARSER_PERFORMANCE_ARCHITECTURE.md  PARSER_RUNTIME_COMPONENTS.md  PARSER_SEGMENTED_STACK_DESIGN.md  PERFORMANCE.md  PERFORMANCE_TRIALS.md  README.md  REWRITE_PLAN.md  ROADMAP.md  SUBTREE_ARENA_PLAN.md  SUBTREE_INDEX_RESULTS.md  traversal_perf.md
.github/workflows/: build.yml  docs.yml  release.yml  wasm_exports.yml
crates/cli/: Cargo.toml
crates/loader/: Cargo.toml
crates/xtask/: Cargo.toml
docs/src/: SUMMARY.md  (+5 more)
lib/: Cargo.toml  package.nix
lib/binding_rust/: README.md  bindings.rs  build.rs  lib.rs
lib/include/tree_sitter/: api.h
lib/src/: alloc.h  array.h  atomic.h  language.h  length.h  lexer.h  lexer_log_shim.c  lib.c  point.h  remaining_lib.c  subtree.h  tree_cursor.h  unicode.h  wasm_store.c
lib/src/unicode/: README.md  urename.h
lib/src_rust/: alloc.rs  error_costs.rs  get_changed_ranges.rs  language.rs  length.rs  lexer.rs  mod.rs  node.rs  parser.rs  point.rs  query.rs  raw_pointer.rs  reduce_action.rs  reusable_node.rs  stack.rs  subtree.rs  tree.rs  tree_cursor.rs  unicode.rs  utils.rs
lib/src_rust/get_changed_ranges/: range.rs
lib/src_rust/language/: generated.rs  lookahead.rs
lib/src_rust/node/: fields.rs  navigation.rs
lib/src_rust/parser/: actions.rs  advance.rs  balancing.rs  external_scanner.rs  lexing.rs  logging.rs  recovery.rs  reduction.rs
lib/src_rust/stack/: debug.rs  pop.rs  stack_node.rs
lib/src_rust/subtree/: data.rs  debug.rs  edit.rs  handle.rs  storage.rs
lib/src_rust/tree_cursor/: navigation.rs  status.rs
lib/tests/: abi_surface.golden  abi_surface.rs
(+38 files in other folders)
